# TensorRT-LLM

./: .gitignore
cpp/kernels/xqa/: mha_sm90.cu
cpp/tensorrt_llm/: CMakeLists.txt
cpp/tensorrt_llm/kernels/: CMakeLists.txt
cpp/tensorrt_llm/kernels/decoderMaskedMultiheadAttention/: decoderXQAImplCommon.cpp  decoderXQAImplCommon.h  decoderXQAImplPrecompiled.cpp
cpp/tensorrt_llm/kernels/decoderMaskedMultiheadAttention/decoderXQAImplJIT/: decoderXQAImplJIT.cpp
cpp/tensorrt_llm/kernels/deepEpKernels/: CMakeLists.txt
cpp/tensorrt_llm/pybind/executor/: request.cpp
cpp/tensorrt_llm/thop/: CMakeLists.txt  deepEpConfig.hpp  deepEpOp.cpp  deepEpOp.h  deepEpOpEvent.hpp
docker/: Dockerfile.multi  Makefile
docker/common/: install_nvshmem.sh
docs/source/blogs/: feat_llama4_eagle3.md
sd_study/: README.md
sd_study/AR/: build_model.sh  convert_checkpoint.sh  serve.sh
sd_study/eagle/: build_model.sh  convert_checkpoint.sh  extra_llm_api_options.yaml  load_eagle_ckpt.py  merge_eagle.sh  quantize_eagle.sh  run.sh  serve.sh
tensorrt_llm/_torch/custom_ops/: __init__.py  deepep_custom_ops.py
tensorrt_llm/_torch/models/: modeling_llama.py  modeling_qwen3_moe.py
tensorrt_llm/_torch/modules/: attention.py
tensorrt_llm/_torch/pyexecutor/: py_executor.py
tensorrt_llm/bench/benchmark/: throughput.py
tensorrt_llm/bench/dataclasses/: configuration.py  reporting.py
tensorrt_llm/commands/: bench.py
tests/integration/defs/accuracy/: test_llm_api_pytorch.py
tests/integration/defs/accuracy/references/: mmlu.yaml
tests/integration/test_lists/test-db/: l0_h100.yml
tests/unittest/trt/functional/: test_deepep.py
